更新 解决批改网禁止粘贴问题.md

--- a/Web/实用技巧/解决批改网禁止粘贴问题/解决批改网禁止粘贴问题.md
+++ b/Web/实用技巧/解决批改网禁止粘贴问题/解决批改网禁止粘贴问题.md
@@ -27,3 +27,10 @@ https://zhuanlan.zhihu.com/p/360282992
 
 3.点击setting，找到debugger-disable Javascript，勾选
 ![alt text](image.png)
+![alt text](image-1.png)
+快捷键操作：F12→FI→（打勾）Javascript
+
+然后就能发现页面的粘贴选项可以用了，记得用完取消勾选disable-Javascript，需要的时候才开启~
+
+另外，我又整理了一张图，里面是跳过网页禁止复制粘贴的方法大全，不敢说最全，但应该是较全面的了叭（可能整理的还不是很好，要是有错误的地方大家可以给我指出来，非常感谢~）
+![alt text](image-2.png)
