更新 网站推荐.md

--- a/Web/网站推荐/网站推荐.md
+++ b/Web/网站推荐/网站推荐.md
@@ -1,6 +1,8 @@
-[国外接码平台](https://sms-activate.org/cn)
-[国内接码平台](:https://www.eomsg.com/appweb/t1.html)
-[思维导图网站](https://www.iodraw.com/mind)
+#  国内外接码平台:
+- [国外接码平台](https://sms-activate.org/cn)
+- [国内接码平台](https://www.eomsg.com/appweb/t1.html)
+# 思维导图:
+- [思维导图网站](https://www.iodraw.com/mind)
 # 影视资源:
 - [小宝影院](https://xiaoxintv.net/)
 - [樱花动漫](https://www.856dm.com/)
