--- a/Web/实用技巧/梯子/机场.md
+++ b/Web/实用技巧/梯子/机场.md
@@ -1,2 +1,5 @@
+[机场相关](https://discord.com/channels/1218507417533419531/1237736138651861072)
+
+
 https://t.me/fscloud2
 https://t.me/xingjiabijichang
