--- a/0/0.md
+++ b/0/0.md
@@ -3,9 +3,11 @@ vpn→接码平台→注册谷歌→谷歌(谷歌搜索,youtube...)→AI(Chatgpt
 
 vpn:
 不管用什么办法反正你得翻过来,然后花钱买个适当的机场youtube有机场推荐.
+https://github.com/AuroraDasiy/Index/tree/main/Web/%E5%AE%9E%E7%94%A8%E6%8A%80%E5%B7%A7/%E6%A2%AF%E5%AD%90
 
-(接码平台)[https://sms-activate.io/cn]:
+[接码平台](https://sms-activate.io/cn):
 通过接码平台买个香港手机号(ip和vpnip一致才能短信验证),注册谷歌.
+https://github.com/AuroraDasiy/Index/tree/main/Web/%E5%AE%9E%E7%94%A8%E6%8A%80%E5%B7%A7/%E5%9B%BD%E5%A4%96%E6%89%8B%E6%9C%BA%E5%8F%B7
 
 注册谷歌:
 一定要用同一个vpnip登录不然封掉,开启两步验证防止封
