Batch commit changes

--- a/Web/网站推荐/网站推荐.md
+++ b/Web/网站推荐/网站推荐.md
@@ -5,4 +5,7 @@
 - [思维导图网站](https://www.iodraw.com/mind)
 # 影视资源:
 - [小宝影院](https://xiaoxintv.net/)
+# Anime
 - [樱花动漫](https://www.856dm.com/)
+- https://anime.girigirilove.com
+- https://www.wenku8.net/login.php?jumpurl=http%3A%2F%2Fwww.wenku8.net%2Findex.php
