Batch commit changes

--- a/Web/实用技巧/VPN/机场.md
+++ b/Web/实用技巧/VPN/机场.md
@@ -1,5 +1,4 @@
-[机场相关](https://discord.com/channels/1218507417533419531/1237736138651861072)
+法律原因 原内容收集到 discord
+https://discord.com/
 
-
-https://t.me/fscloud2
-https://t.me/xingjiabijichang
+https://discord.com/channels/1218507417533419531/1288789099305762839
