Batch commit changes

--- a/Web/网站推荐/网站推荐.md
+++ b/Web/网站推荐/网站推荐.md
@@ -7,5 +7,17 @@
 - [小宝影院](https://xiaoxintv.net/)
 # Anime
 - [樱花动漫](https://www.856dm.com/)
-- https://anime.girigirilove.com
-- https://www.wenku8.net/login.php?jumpurl=http%3A%2F%2Fwww.wenku8.net%2Findex.php
+
+- https://anime.girigirilove.com or https://anime.girigirilove.icu/ or https://bbs.girigirilove.com/
+
+# 轻小说
+- https://www.wenku8.net/login.php?jumpurl=http%3A%2F%2Fwww.wenku8.net%2Findex.php 轻小说
+
+# 电子书
+- https://z-library.sk/?ts=1716
+
+- https://zh.annas-archive.org/
+
+# 游戏
+- https://cs.rin.ru/forum/index.php
+- 
