Batch commit changes

--- a/Markdown/换行.md
+++ b/Markdown/换行.md
@@ -1,6 +1,6 @@
 在 Markdown 语法中，换行的方式如下：
 
-### 方法 1: 在行尾添加两个空格
+### 方法 1: 在行尾添加两个空格 (小换行)
 如果想在段落内实现换行，可以在需要换行的地方**行尾加两个空格**，然后回车：
 
 ```markdown
@@ -28,7 +28,7 @@
 
 ---
 
-### 方法 3: 使用空行区分段落
+### 方法 3: 使用空行区分段落  (大换行)
 如果要分段而不是简单的换行，只需在两段文字之间留一个空行：
 
 ```markdown
