Batch commit changes

--- a/Markdown/正则表达式.md
+++ b/Markdown/正则表达式.md
@@ -87,7 +87,10 @@ abc
    - `\d{4}$`：匹配4个数字并结束。
 
 ---
-
+------
+---
+---
+-----
 ### 用途
 1. **验证输入**：如邮箱、电话号码、密码格式等。
 2. **搜索和替换**：在文本中查找特定模式并替换。
@@ -97,3 +100,131 @@ abc
 
 ### 小结
 正则表达式是一种强大的文本匹配工具，通过组合普通字符和特殊字符，可以创建复杂的模式来匹配、查找和操作文本。如果你有特定的需求或想看更多示例，请告诉我！
+
+---
+正则表达式（Regular Expression）是用来匹配字符串中符合某些特定规则的文本模式的工具。在进行文本搜索、替换、数据检索和验证输入等任务时，正则表达式能提供高效、灵活而精确的处理手段。下面将从基础概念、常用语法、应用举例以及搜索流程等方面，详细讲解搜索时常用的正则表达式。
+
+### 一、正则表达式的基本概念
+正则表达式可以看作是一种用于描述字符串匹配规则的“小型语言”。通过定义特定的字符和符号（称为元字符），可以用一条规则来匹配一类字符串，从而使搜索过程更具泛化性和自动化。例如，如果我们需要从一段文本中找到所有的电子邮件地址、电话号码或特定格式的日期，而不需要在每次遇到此类任务时都重复编写冗长的匹配代码，正则表达式就可以派上用场。
+
+### 二、基本元字符与语法
+
+1. **普通字符**  
+   普通字符（如字母、数字、汉字及其他未被特殊解释的符号）在正则中表示其字面含义。  
+   例如，`abc` 在正则中就匹配字符串中连续出现的 "`abc`"。
+
+2. **字符类与预定义字符类**  
+   字符类用方括号 `[]` 包围，用于匹配一组字符中任意一个字符。例如：  
+   - `[abc]` 匹配 `'a'`、`'b'` 或 `'c'` 中的任意一个字符。  
+   - `[0-9]` 匹配任意一个0到9的数字字符。  
+   
+   同时，正则表达式中有一些预定义字符类用于简化使用：  
+   - `\d` 匹配0-9任意一位数字，等价于 `[0-9]`。  
+   - `\w` 匹配任意一个字母（包括下划线）或数字，等价于 `[0-9A-Za-z_]`。  
+   - `\s` 匹配空白字符（空格、制表符、换行符等）。  
+   - `.` （点号）匹配除换行符以外的任意一个字符。  
+   
+   需要注意反义字符类（用大写字母表示与原字符类相反的集合）：  
+   - `\D` 匹配非数字字符。  
+   - `\W` 匹配非字母、数字和下划线的字符。  
+   - `\S` 匹配非空白字符。
+
+3. **量词**  
+   量词用于限定前面元素重复出现的次数：  
+   - `*` ：匹配前面的模式0次或多次。  
+   - `+` ：匹配前面的模式1次或多次。  
+   - `?` ：匹配前面的模式0次或1次。  
+   - `{n}` ：匹配前面模式恰好 n 次。  
+   - `{n,}` ：匹配前面模式至少 n 次。  
+   - `{n,m}` ：匹配前面模式至少 n 次，至多 m 次。  
+   
+   例如，`\d+` 匹配一个或多个连续数字；`[A-Za-z]{3}` 匹配三个连续的字母（大小写皆可）。
+
+4. **分组与引用**  
+   使用圆括号 `()` 可以对表达式进行分组，从而当量词或替换时只作用于该组。例如：  
+   - `(abc)+` 匹配 `"abc"` 字符串的一次或多次重复，如 `"abcabcabc"`。  
+   
+   分组还可以用于捕获匹配的子串，以便在替换或后续引用中使用。  
+   对捕获组可用 `\1`, `\2` 等在同一条正则中引用前面匹配的内容。
+
+5. **位置锚点**  
+   锚点用于指定匹配应当出现的特定位置：  
+   - `^` ：匹配字符串的开头。  
+   - `$` ：匹配字符串的结尾。  
+   - `\b` ：匹配词边界（如在单词与空格或标点之间）。  
+   - `\B` ：匹配非词边界。  
+   
+   例如， `^abc` 匹配以 `abc` 开头的字符串， `xyz$` 匹配以 `xyz` 结尾的字符串。
+
+6. **选择与分支**  
+   使用管道符 `|` 表示“或”的关系。  
+   - `(abc|xyz)` 匹配 `abc` 或 `xyz`。  
+   
+   这在搜索多个可能的模式时非常有用。
+
+### 三、典型搜索场景与正则示例
+
+1. **搜索特定格式的日期**  
+   比如匹配 YYYY-MM-DD 格式的日期（如 `2024-12-31`）：  
+   ```regex
+   ^\d{4}-\d{2}-\d{2}$
+   ```
+   该正则要求字符串以4位数字开头，接着一个连字符，再跟2位数字、连字符，然后又2位数字，并且匹配到字符串末尾。
+
+2. **搜索电子邮件地址**  
+   一个简单（不完全严谨）的邮箱匹配示例：  
+   ```regex
+   ^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,}$
+   ```
+   这条表达式要求：  
+   - 以一组字母、数字、点、下划线、百分号、加号或减号组成的字符串开始（至少1个字符），  
+   - 跟随一个 `@` 符号，  
+   - 再跟一组字母数字及点或连字符，  
+   - 然后一个 `.`  
+   - 最后至少2个字母来结尾。
+
+3. **搜索包含特定关键词的行**  
+   若要匹配所有包含单词 `error` 的行（不区分大小写），并要求以 `error` 开头的行：  
+   ```regex
+   ^error.*$
+   ```
+   如果是包含 `error` 即可的行，可用：  
+   ```regex
+   error
+   ```
+   这会在任意位置匹配出现 `error` 的地方。
+
+4. **匹配电话号码**（假设是北美电话号码，格式可能是 `xxx-xxx-xxxx`）：  
+   ```regex
+   ^\d{3}-\d{3}-\d{4}$
+   ```
+
+### 四、搜索流程与实战步骤
+
+1. **明确搜索目标**：  
+   在编写正则之前，先清楚要找什么模式，例如：日期？邮件地址？URL？特定关键词？
+
+2. **编写正则表达式**：  
+   根据目标明确使用的元字符、量词、分组及锚点。如果不确定，可由简单到复杂不断迭代。
+
+3. **测试与调试**：  
+   借助在线正则测试工具（如 regex101）或编程语言内置的方法测试你的正则，对比匹配结果和预期进行调整。
+
+4. **整合到搜索工具中**：  
+   在文本编辑器（如VSCode、Notepad++、Sublime Text）或命令行工具（如 grep、ag）中使用正则进行搜索；  
+   在编程语言中（如 Python 的 `re` 模块或 JavaScript 的 `RegExp` 对象）调用正则函数进行搜索与匹配。
+
+### 五、常见注意事项
+
+- **贪婪与懒惰匹配**：  
+  默认情况下量词是贪婪的，会匹配尽可能多的字符。如果想让量词尽可能少的匹配字符，可使用懒惰量词（在量词后加 `?`）。比如 `.*?` 会尽可能少地匹配字符。
+
+- **转义字符**：  
+  元字符如 `.`, `*`, `+`, `?`, `|`, `^`, `$`, `(`, `)`, `[`, `]`, `{`, `}` 若需要匹配字面字符，需要使用 `\` 进行转义。例如要匹配 `.`（点号本身），可用 `\.` 来表示。
+
+- **大小写敏感与不敏感**：  
+  大多数正则引擎有选项指定搜索时是否区分大小写，比如 `i` 标记（在某些语法中）表示不区分大小写。
+
+---
+
+总而言之，正则表达式是文本搜索和处理中的有力工具。通过掌握其元字符、量词、分组与锚点等基本语法，以及学会在实际搜索中灵活使用与调试，能大幅提高处理文本数据的效率与精确性。
