Batch commit changes

--- a/Java/数据结构与算法java/数据结构.md
+++ b/Java/数据结构与算法java/数据结构.md
@@ -11,10 +11,20 @@ dest：目标数组（将元素复制到这个数组）。
 destPos：目标数组的起始位置（复制到目标数组的哪个位置）。
 length：要复制的元素个数。
 
+- interface 和 抽象方法 接口是子集不同的方法 抽象方法是子集中共有的方法  public abstract void f();
 
 
 
 
+# Tips
+- static 静态修饰符 常用于辅助方法和辅助类 与类中的变量无关联 静态(孤立的);  
+-  add remove set get
+任何数据结构都应该提供增删改查的方法
+add 末尾加入 中间插入
+remove 索引删除 元素删除
+set 索引改元素
+get 查 元素 查索引
+- 
 
 # 二分查找
 数组升序排列;
@@ -102,12 +112,7 @@ java.util.Arrays中的 Arrays.binarySearch(数组,值);
 二分查找为 O(logn)
 ## 空间复杂度
 内存占用大小
-# add remove set get
-任何数据结构都应该提供增删改查的方法
-add 末尾加入 中间插入
-remove 索引删除 元素删除
-set 索引改元素
-get 查 元素 查索引
+
 # 数组 
 N自然数集->数据的映射(和哈希值相反)
 ## 空间占用
@@ -402,7 +407,8 @@ head->...->head  单向
 head<->...<->head 双向
 # 链表题目
 ## tips
-- p.next!=null
+- 防止空指针,例如p3.val p3如果为null则空指针 所以要 p3!=null p.next!=null
+- 多指针控制
 - 设置哨兵头节点防止error
 ## 反转链表
 - 构造新链表,以此遍历去出旧链表中的元素add进新链表
@@ -450,6 +456,39 @@ class Solution {
         return h.next;
     }
 }
+```
+## 链表去重
+```java
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        // 创建辅助头节点，指向原链表头
+        ListNode h = new ListNode(-1, head);
+        ListNode p1 = h;
+
+        // 遍历链表
+        while (p1.next != null && p1.next.next != null) {
+            ListNode p2 = p1.next;       // 当前节点
+            ListNode p3 = p2.next;      // 下一个节点
+
+            // 如果当前节点和下一个节点的值相等
+            if (p2.val == p3.val) {
+                // 找到所有重复的节点
+                while (p3.next != null && p3.next.val == p2.val) {
+                    p3 = p3.next;
+                }
+                // 跳过重复的节点
+                p1.next = p3.next;
+            } else {
+                // 如果没有重复，移动指针
+                p1 = p1.next;
+            }
+        }
+
+        // 返回去除重复节点后的链表
+        return h.next;
+    }
+}
+
 ```
 # 递归
 ``` java
